static/scss/components/filter-bar.scss
.c-filter {
    display: flex;
    align-items: center;
    margin-bottom: $spacing-md;
    
    &.is-search-active {
        margin-bottom: 4.5rem;
        position: relative;

        .c-filter-search-form {
            display: block;
            position: absolute;
            width: 100%;
            top: calc(100% + 1rem);
            
        }
        
        .c-filter-search-input {
            width: 100%;
        }
    }

    @media screen and (min-width: 768px) {
        justify-content: flex-end;
        &.is-search-active {
            margin-bottom: $spacing-md;
            
            .c-filter-search-form {
                width: auto;
                position: relative;
                top: auto;
            }
        }
    }
}

// Search Bar

.c-filter-search {

    form {
        display: none;
        position: relative;
    }

    input[type="search"] {
        background-image: url(/static/images/icon-search.svg);
        margin-bottom: 0;
        padding-right: 1.75rem;
        &:focus + .c-filter-case-count {
            opacity: .5;
        }
        &:focus + .c-filter-case-count + .c-filter-reset {
            opacity: 1;
        }
    }

    .c-filter-case-count {
        display: flex;
        opacity: 0;
        position: absolute;
        right: 2.5rem;
        top: 0;
        align-items: center;
        height: 100%;
        transition: opacity .2s ease-out;
    }

    @media #{$mq-md} {
        align-self: flex-start;
        margin-right: auto;
        form {
            display: block;
        }
        .c-filter-icon {
            display: none;
        }
    }
}

.c-filter-action {
    margin-left: auto;
    @media #{$mq-md} {
        margin-left: 0;
    }
}

.c-filter-icon {
    width: 2.25rem;
    height: 2.25rem;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 100%;
    cursor: pointer;
    background-position: center;
    background-size: auto 1.25rem;
    background-repeat: no-repeat;
    
    &.is-enabled, &:hover {
        background-color: $color-white;
        color: $color-blue-50;
    }

}

.c-filter-icon-search {
    background-size: auto 1.25rem;
    background-image: url(/static/images/icon-search.svg);
    &.is-enabled, &:hover {
        background-image: url(/static/images/icon-search-blue.svg);        
    }
}

.c-filter-icon-calendar {
    background-image: url(/static/images/icon-calendar.svg);
    &.is-enabled, &:hover {
        background-image: url(/static/images/icon-calendar-blue.svg);        
    }
}

.c-filter-icon-filter {
    background-image: url(/static/images/icon-filter.svg);
    &.is-enabled, &:hover {
        background-image: url(/static/images/icon-filter-blue.svg);        
    }
}

.c-filter-date, .c-filter-cateogry {
    margin-left: $spacing-xs;
}

.c-filter-reset {
    background-color: $color-light-gray-40;
    border-radius: 100%;
    width: 1.5rem;
    height: 1.5rem;
    display: flex;
    justify-content: center;
    align-items: center;
    outline: 0;
    appearance: none;
    border: 0;
    position: absolute;
    right: .5rem;
    top: .5rem;
    opacity: 0;

    img {
        width: 1rem;
        display: block;
    }
}

